package shared

type ProgrammerLanguage string

const (
	Python = "Python"
	R      = "R"

	Java   = "Java"
	Kotlin = "Kotlin"
	Scala  = "Scala"
	Groovy = "Groovy"

	CSharp      = "CSharp"
	VisualBasic = "VisualBasic"

	CPlusPlus = "CPlusPlus"
	C         = "C"
	Rust      = "Rust"

	Assembler = "Assembler"

	PHP = "PHP"

	JavaScript = "JavaScript"
	TypeScript = "TypeScript"
	Dart       = "Dart"

	Golang = "Golang"

	Perl = "Perl"

	Swift      = "Swift"
	ObjectiveC = "Objective-C"

	Sql = "SQL"

	Ruby   = "Ruby"
	Elixir = "Elixir"

	Lua = "Lua"

	PowerShell = "PowerShell"
	Bash       = "Bash"
	Proto      = "Proto"
	Yaml       = "YAML"
)
