package shared

type ProgrammerLanguage int

const (
	Python ProgrammerLanguage = iota
	R

	Java
	Kotlin
	Scala
	Groovy

	CSharp
	VisualBasic

	CPlusPlus
	C
	Rust

	Assembler

	PHP

	JavaScript
	TypeScript
	Dart

	Golang

	Perl

	Swift
	ObjectiveC

	Sql

	Ruby
	Elixir

	Lua

	PowerShell
	Bash
	Proto
	Yaml
)
